[project]
name = "reddit-who-dis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "praw>=7.8.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "openai>=1.93.1",
    "numpy>=2.3.1",
    "sounddevice>=0.5.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
